Fixed minor issues with text spacing and alignment

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -35,7 +35,6 @@ header section {
 
 header section ul {
     list-style-type: none;
-    text-align: right;
 
 }
 
@@ -50,7 +49,7 @@ a {
     text-decoration: none;
 }
 
-figcaption {
+p {
     font-size: 16px;
 }
 
@@ -58,8 +57,10 @@ figcaption {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+    display: block;
 }
 
 .float-left {
@@ -73,9 +74,7 @@ figcaption {
 }
 
 section {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
+
 }
 
 aside {
@@ -95,6 +94,7 @@ aside {
 }
 
 .benefits h3 {
+    /* margin-top: 32px; */
     margin-bottom: 10px;
     text-align: center;
 }
@@ -105,7 +105,14 @@ aside {
     max-width: 150px;
 }
 
-#search-engine-optimization {
+.blocks {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+/*Styles all articles in the blocks container*/
+.blocks article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -114,47 +121,13 @@ aside {
     color: #ffffff;
 }
 
-#online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-#social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-#search-engine-optimization img {
+/*Styles all images under .blocks*/
+.blocks img {
     max-height: 200px;
 }
 
-#online-reputation-management img {
-    max-height: 200px;
-}
-
-#social-media-marketing img {
-    max-height: 200px;
-}
-
-#search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#social-media-marketing h2 {
+/*Styles all <h2> under .blocks*/
+.blocks h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
